style.css
body{
font-family: Arial, sans-serif;
margin:0;
background:#f4f7f4;
text-align:center;
}

header{
background:#2e7d32;
color:white;
padding:30px;
}
.how{
padding:40px 20px;
text-align:center;
}

.steps{
display:flex;
flex-wrap:wrap;
justify-content:center;
gap:20px;
margin-top:20px;
}

.step{
background:#f5f5f5;
padding:20px;
border-radius:10px;
max-width:220px;
}
.hero{
text-align:center;
padding:60px 20px;
max-width:700px;
margin:auto;
}

.btn{
display:inline-block;
background:#2e7d32;
color:white;
padding:12px 22px;
border-radius:8px;
text-decoration:none;
font-weight:600;
margin-top:15px;
}

.btn:hover{
background:#256628;
}
footer{
margin-top:80px;
padding:20px;
}
.plant-card{
background:white;
border-radius:12px;
padding:15px;
width:180px;
box-shadow:0 4px 10px rgba(0,0,0,0.1);
text-align:center;
transition:transform 0.2s;
height:220px;
}

.plant-card:hover{
transform:scale(1.05);
}

.plant-img{
width:80px;
height:80px;
object-fit:contain;
display:block;
margin:0 auto 10px auto;
}
.back-home{
display:inline-block;
margin:15px;
padding:8px 14px;
background:#4CAF50;
color:white;
text-decoration:none;
border-radius:6px;
font-size:14px;
}

.back-home:hover{
background:#3e8e41;
}

.plants-container{
display:grid;
grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
gap:20px;
margin-top:20px;
width:100%;
max-width:1000px;
margin-left:auto;
margin-right:auto;
}

